--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
                     D-block: é o display: block, o que deixa as imagens lado a lado
                 -->
                 <div class="carousel-item active">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/floresta.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="floresta.jpg" alt="">
                 </div>
 
                 <!--Atributo "carousel-item" define cada slide individualmente-->
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/floresta1.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="floresta1.jpg" alt="">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/leopardo.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="leopardo.jpg" alt="">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/ursopardo.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="ursopardo.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -95,19 +95,19 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/floresta.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="floresta.jpg" alt="">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/floresta1.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="floresta1.jpg" alt="">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/leopardo.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="leopardo.jpg" alt="">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/ursopardo.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="ursopardo.jpg" alt="">
                 </div>
             </div>
 
@@ -159,19 +159,19 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/floresta.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="floresta.jpg" alt="">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/floresta1.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="floresta1.jpg" alt="">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/leopardo.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="leopardo.jpg" alt="">
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/ursopardo.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="ursopardo.jpg" alt="">
                 </div>
             </div>
 
@@ -205,7 +205,7 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/floresta.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="floresta.jpg" alt="">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Trilha no Outono</h5>
                         <p>Caminhar entre as folhas douradas de uma floresta no outono...</p>
@@ -213,7 +213,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/floresta1.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="floresta1.jpg" alt="">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>O despertar da Floresta Tropical</h5>
                         <p>O nascer do sol entre as árvores tropicais representa o início...</p>
@@ -221,7 +221,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/leopardo.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="leopardo.jpg" alt="">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>A beleza dos animais silvestres</h5>
                         <p>Marcam sua beleza dentro das grandes floras...</p>
@@ -229,7 +229,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" style="height:500px;" src="Imagens/ursopardo.jpg" alt="">
+                    <img class="d-block w-100" style="height:500px;" src="ursopardo.jpg" alt="">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 style="color: black;">O amor pra sempre</h5>
                         <p style="color: black;">O amor nosso será eternamente eterno.</p>
